# devops-for-cplusplus

./: .gitignore  CMakeLists.txt  readme-ms001.md  readme.md  sonar-project.properties
app/include/: config.hpp  echo_logic.hpp  version.hpp
app/src/: config.cpp  echo_logic.cpp  main.cpp  version.cpp
app/tests/integration/: test_api.py
app/tests/unit/: test_config.cpp  test_echo_logic.cpp
docker/jenkins-agent/: Dockerfile
docs/: ms001-runbook-local.md  ms001-runbook-tf.md  ms001-runbook.md  ms002-pipeline-design.md  ms002-runbook-jenkins.md  ms003-pipeline-design-sonarqube.md  ms003-runbook-jenkins-sonarqube.md  ms003-runbook-sonarqube.md  ms003-runbooke-sonarqube.md  ms004-runbook-1-k3s-provision.md  ms004-runbook-2-agent-image.md  ms004-runbook-3-k8s-plugin.md  ms004-runbook-4-pipeline-migration.md  ms004-troubleshooting-k8s-agents.md  runbook-local.md  runbook-ms001.md  runbook-tf-ms001.md  terraform-howto.md
infra/terraform/: .terraform.lock.hcl  instance.tf  key_pair.tf  locals.tf  outputs.tf  provider.tf  security_grp.tf  variables.tf
infra/terraform/modules/instance/: main.tf  outputs.tf  variables.tf
infra/terraform/provision/: devops_host_setup.sh
infra/terraform/user_data/: devops_host_setup.sh  jenkins_master_setup.sh  k3s_setup.sh  sonarqube_setup.sh
jenkins/: Jenkinsfile  Jenkinsfile_scripted
jenkins/agent/: Jenkinsfile
jenkins/agent-build/: Jenkinsfile
jenkins/agent-test/: Jenkinsfile
scripts/: bootstrap.sh  build.sh  install_service.sh  package.sh  run_local.sh  service_control.sh  test.sh
